// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults value to empty string 1`] = `
Array [
  "",
  Object {},
]
`;

exports[`returns all props needed 1`] = `
Object {
  "prop1": "prop1",
  "prop2": "prop2",
}
`;

exports[`sets initial values 1`] = `
Array [
  "the value",
  Object {
    "error": "on",
    "helperText": "the help",
    "label": "the label",
    "optional": false,
    "value": "the value",
  },
]
`;

exports[`sets initialValue from form 1`] = `
Array [
  "i am initial",
  Object {
    "error": "on",
    "helperText": "the help",
    "label": "the label",
    "optional": false,
    "value": "the value",
  },
]
`;
